adjust screen size et ajout icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://preview.redd.it/snake-head-v0-4ntn4a5zitq91.png?auto=webp&s=96d85dc2152d2c13dabe61932a63681f64e8afca" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
